compiler/tests/fail/arm-m4/intrinsic_mlaS.jazz
export
fn main(reg u32 x y) -> reg u32 {
    x = #MLAS(x, y);
    return x;
}
